# openstack-api

./: .gitignore  LICENSE  openstack-api.cabal
lib/OpenStack/: Common.hs  Keystone.hs  Nova.hs
test/: test.hs
