name:                openstack-api
version:             0.1.0.0
homepage:            https://github.com/anchor/openstack-api
license:             BSD3
license-file:        LICENSE
author:              Anchor Engineering <engineering@anchor.com.au>
maintainer:          Anchor Engineering <engineering@anchor.com.au>
build-type:          Simple
cabal-version:       >=1.10
category:            OpenStack
synopsis:            OpenStack APIs
description:         OpenStack APIs
source-repository head
  type:      git
  location:  https://github.com/anchor/openstack-api

library
  exposed-modules:     OpenStack.Common
                     , OpenStack.Keystone
                     , OpenStack.Nova
  build-depends:       base >=4.7 && <4.9
                     , aeson
                     , bytestring
                     , containers
                     , either
                     , lens
                     , http-client
                     , http-types
                     , mtl
                     , old-locale
                     , servant
                     , servant-client
                     , text
                     , time
                     , transformers
                     , transformers-compat >= 0.4
                     , unordered-containers
                     , vector
  hs-source-dirs:      lib
  default-language:    Haskell2010

test-suite unit-tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             test.hs
  default-language:    Haskell2010
  build-depends:       base >=4.7 && <5
                     , openstack-api
                     , hspec
                     , text
                     , transformers
                     , transformers-compat >= 0.4